feat: add loading preloader with spinning logo to all pages

--- a/blog.html
+++ b/blog.html
@@ -33,6 +33,17 @@
 </head>
 
 <body>
+    <!-- Preloader -->
+      <div id="preloader">
+        <div class="preloader-content">
+            <div class="preloader-logo">
+                <img src="images/logo.png" alt="Perfect Springs Logo">
+            </div>
+            <div class="preloader-text">Perfect Springs</div>
+            <div class="preloader-spinner"></div>
+        </div>
+    </div>
+
     <!-- Header & Navigation (Same as index.html, but with active class on 'About') -->
     <header class="sticky-top">
         <nav class="navbar navbar-expand-lg bg-white shadow-sm">
