--- a/index.html
+++ b/index.html
@@ -30,7 +30,18 @@
     <link rel="stylesheet" href="style.css" />
 </head>
 
-<body data-aos-animation="fade" data-aos="fade-up" data-aos-duration="1000">
+<body>
+    <!-- Preloader -->
+      <div id="preloader">
+        <div class="preloader-content">
+            <div class="preloader-logo">
+                <img src="images/logo.png" alt="Perfect Springs Logo">
+            </div>
+            <div class="preloader-text">Perfect Springs</div>
+            <div class="preloader-spinner"></div>
+        </div>
+    </div>
+
     <!-- Header & Navigation -->
     <header class="home-header">
         <nav class="navbar navbar-expand-lg sticky-top px-4" style="background-color:rgba(248, 251, 251, 1);">
@@ -273,5 +284,5 @@
         crossorigin="anonymous"></script>
     <!-- AOS -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
 </body>
