--- a/contact.html
+++ b/contact.html
@@ -30,6 +30,17 @@
 </head>
 
 <body>
+    <!-- Preloader -->
+      <div id="preloader">
+        <div class="preloader-content">
+            <div class="preloader-logo">
+                <img src="images/logo.png" alt="Perfect Springs Logo">
+            </div>
+            <div class="preloader-text">Perfect Springs</div>
+            <div class="preloader-spinner"></div>
+        </div>
+    </div>
+
     <!-- Header & Navigation (Active class on 'Products') -->
     <header class="sticky-top">
         <nav class="navbar navbar-expand-lg bg-white shadow-sm">
