--- a/distributor.html
+++ b/distributor.html
@@ -32,6 +32,17 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <!-- Preloader -->
+      <div id="preloader">
+        <div class="preloader-content">
+            <div class="preloader-logo">
+                <img src="images/logo.png" alt="Perfect Springs Logo">
+            </div>
+            <div class="preloader-text">Perfect Springs</div>
+            <div class="preloader-spinner"></div>
+        </div>
+    </div>
+
     <!-- Header & Navigation (Active class on 'Become a Distributor' button) -->
     <header class="sticky-top">
       <nav class="navbar navbar-expand-lg bg-white shadow-sm">
